--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -149,6 +149,7 @@ $border-radius: 6px;
         font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
         font-size: 12px;
         line-height: 30px;
+        margin-left: -24px; /* change later*/
         .check {
           padding-right: 5px;
           padding-top: 5px;
@@ -523,6 +524,51 @@ $border-radius: 6px;
           background: $cor-verde-submit;
         }
 
+      }
+    }
+  }
+}
+
+.popup-alert {
+  .modal-dialog {
+    width: 440px;
+    margin: 10px auto;
+    top: 300px;
+  }
+  .modal-body {
+    font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+    font-size: 14px;
+    min-height: 80px;
+    color: #9a9a9a;
+
+    .icon {
+      float: left;
+      width: 25%;
+    }
+    .msg {
+      float: left;
+      width: 75%;
+      margin-bottom: 20px;
+    }
+
+  }
+  .modal-footer {
+    border-top: none;
+    button {
+      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+      font-weight: bold;
+      font-size:15px;
+      color: #FFF;
+      float: right;
+      margin: 0 5px;
+      background: $cor-verde-submit;
+      height: 40px;
+      border: none;
+      border-radius: $border-radius;
+      width: 110px;
+
+      &:hover {
+        background: lighten($cor-verde-submit, 10%);
       }
     }
   }
