--- a/public/assets/portal/css/register.css
+++ b/public/assets/portal/css/register.css
@@ -398,4 +398,117 @@
     .popup-alert .modal-footer button:hover {
       background: #8bca43; }
 
+.breadcrumb {
+  font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif !important;
+  /*centering*/
+  display: inline-block;
+  overflow: hidden;
+  border-radius: 0px;
+  padding-left: 8px;
+  width: 100%;
+  box-sizing: border-box;
+  padding-right: 25px;
+  /*Lets add the numbers for each link using CSS counters. flag is the name of the counter. to be defined using counter-reset in the parent element of the links*/ }
+  .breadcrumb a {
+    outline: none;
+    display: block;
+    text-indent: 20px;
+    float: left;
+    font-size: 13px;
+    line-height: 45px;
+    color: white;
+    /*need more margin on the left of links to accomodate the numbers*/
+    padding: 0;
+    background: #ff9900;
+    position: relative;
+    width: 33.3333333333%;
+    /*hover/active styles*/ }
+    .breadcrumb a:first-child {
+      border-radius: 5px 0 0 5px;
+      /*to match with the parent's radius*/
+      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif !important;
+      height: 45px;
+      font-size: 14px; }
+      .breadcrumb a:first-child:before {
+        left: 14px; }
+    .breadcrumb a:last-child {
+      border-radius: 0 5px 5px 0;
+      /*this was to prevent glitches on hover*/
+      padding: 1px;
+      color: #FFF;
+      height: 0px;
+      background: #FFF; }
+    .breadcrumb a.active, .breadcrumb a:hover {
+      background: #ff9900;
+      background: -webkit-linear-gradient(#333, #000);
+      background: linear-gradient(#333, #000);
+      color: white; }
+    .breadcrumb a.active:after, .breadcrumb a:hover:after {
+      background: #333;
+      background: -webkit-linear-gradient(315deg, #333, #000);
+      background: linear-gradient(135deg, #333, #000); }
+    .breadcrumb a:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: -18px;
+      /*half of square's length*/
+      /*same dimension as the line-height of .breadcrumb a */
+      width: 45px;
+      height: 45px;
+      /*as you see the rotated square takes a larger height. which makes it tough to position it properly. So we are going to scale it down so that the diagonals become equal to the line-height of the link. We scale it to 70.7% because if square's:
+      length = 1; diagonal = (1^2 + 1^2)^0.5 = 1.414 (pythagoras theorem)
+      if diagonal required = 1; length = 1/1.414 = 0.707*/
+      -webkit-transform: scale(0.707) rotate(45deg);
+      transform: scale(0.707) rotate(45deg);
+      /*we need to prevent the arrows from getting buried under the next link*/
+      z-index: 1;
+      /*background same as links but the gradient will be rotated to compensate with the transform applied*/
+      background: #666;
+      background: -webkit-linear-gradient(315deg, #666, #333);
+      background: linear-gradient(135deg, #666, #333);
+      /*stylish arrow design using box shadow*/
+      box-shadow: 2px -2px 0 2px white, 3px -3px 0 2px white;
+      /*
+          5px - for rounded arrows and
+          50px - to prevent hover glitches on the border created using shadows*/
+      border-radius: 0 5px 0 50px; }
+    .breadcrumb a:last-child:after {
+      content: none; }
+
+/*since the first link does not have a triangle before it we can reduce the left padding to make it look consistent with other links*/
+/*adding the arrows for the breadcrumbs using rotated pseudo elements*/
+/*we dont need an arrow after the last link*/
+/*we will use the :before element to show numbers*/
+.flat a {
+  background: lightgrey;
+  font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif !important;
+  color: white;
+  font-size: 14px;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  height: 45px; }
+  .flat a:after {
+    background: lightgrey;
+    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif !important;
+    color: white;
+    font-size: 14px;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+    height: 45px; }
+  .flat a:before {
+    background: white;
+    box-shadow: 0 0 0 1px #ccc;
+    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif !important; }
+  .flat a:hover, .flat a.active, .flat a:hover:after, .flat a.active:after {
+    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif !important;
+    background: #ff9900; }
+  .flat a:last-child.active {
+    border-radius: 0 5px 5px 0;
+    /*this was to prevent glitches on hover*/
+    padding: 0px;
+    color: #FFF;
+    background: #FFF;
+    height: 0px; }
+
 /*# sourceMappingURL=register.css.map */
