--- a/public/assets/portal/css/register.css
+++ b/public/assets/portal/css/register.css
@@ -412,7 +412,7 @@
   .breadcrumb a {
     outline: none;
     display: block;
-    text-indent: 20px;
+    text-indent: 0;
     float: left;
     font-size: 13px;
     line-height: 45px;
