ref #94: Fix some perfil pages.

--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -3,6 +3,10 @@
   color: black;
   padding-top: 10px; }
 
+.profile .alert-info {
+  font-size: 11px;
+  color: #ff9900; }
+
 .profile .profile-table table {
   width: 90%;
   margin-top: 10px; }
