--- a/resources/assets/sass/profile/profile.scss
+++ b/resources/assets/sass/profile/profile.scss
@@ -4,6 +4,10 @@
     color: black;
     padding-top: 10px;
   }
+  .alert-info {
+    font-size: 11px;
+    color: #ff9900;
+  }
   .profile-table {
     table {
       width: 90%;
