--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -400,6 +400,7 @@ $border-radius: 6px;
 }
 
 .register_step3 {
+  background: #ffffff;
   border: 2px solid #ff9900;
   border-radius: $border-radius;
 
@@ -429,10 +430,13 @@ $border-radius: 6px;
   }
 
   .content {
-    padding: 8px 40px;
+    padding: 8px;
     background-color: white;
     font-family: 'Open Sans', 'Droid Sans', sans-serif;
 
+    .center {
+      padding: 0 30px;
+    }
     .title {
       font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
       text-align: center;
