--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -11,7 +11,7 @@
   width: 90%;
   margin-top: 10px; }
   .profile .profile-table table th {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+    font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
     color: #4a7fb3;
     font-weight: normal;
     font-size: 14px;
@@ -25,7 +25,7 @@
   width: 90%;
   margin-top: 10px; }
   .profile .profile-2table table th {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+    font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
     color: #4a7fb3;
     font-weight: normal;
     font-size: 14px;
@@ -34,83 +34,96 @@
     color: grey;
     height: 25px; }
 
-.profile > .header1 {
-  font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+.profile > .header {
+  background-color: #4a7fb3;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  font-weight: bold;
-  padding-left: 10px;
-  padding-right: 10px;
-  line-height: 40px;
-  vertical-align: middle;
+  color: #ffffff;
+  font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
   font-size: 16px;
+  font-weight: bold;
   height: 44px;
-  color: #FFF;
-  background-color: #4a7fb3; }
-  .profile > .header1 i {
+  line-height: 40px;
+  padding: 0 20px;
+  vertical-align: middle; }
+  .profile > .header i {
     float: right;
     line-height: 40px;
     margin-left: 15px; }
-    .profile > .header1 i .fa-times {
+    .profile > .header i .fa-times {
       font-size: 18px; }
-  .profile > .header1 i:hover {
-    cursor: pointer; }
+  .profile > .header i:hover {
+    cursor: pointer;
+    color: #cccccc; }
+  .profile > .header .user_id {
+    float: right; }
 
-.profile > .header {
-  padding-left: 10px;
-  padding-right: 10px;
-  line-height: 40px;
-  vertical-align: middle;
+.profile > .top-nav {
+  background-color: #4a7fb3;
+  color: #ffffff;
   font-size: 16px;
-  height: 44px;
-  color: #FFF;
-  background-color: #4a7fb3; }
-  .profile > .header .bloco {
-    height: 98%;
-    font-size: 15px;
+  height: 35px;
+  line-height: 30px;
+  padding: 0 20px;
+  vertical-align: middle; }
+  .profile > .top-nav .btn {
     float: left;
+    border: 0;
     color: #99ccff;
+    font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
+    padding: 0;
+    text-align: left;
+    font-size: 15px;
+    line-height: 35px;
     background-color: #4a7fb3; }
-  .profile > .header .small {
-    width: calc(50% / 4); }
-  .profile > .header .big {
-    text-align: center;
-    width: calc(50% / 2); }
-  .profile > .header a {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-    color: #99ccff; }
-  .profile > .header .sel {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-    color: #FFF;
+    .profile > .top-nav .btn:hover {
+      color: #cce6ff;
+      background-color: transparent; }
+  .profile > .top-nav .sel {
+    color: #ffffff;
     font-weight: bold; }
+  .profile > .top-nav .bloco {
+    float: left; }
+  .profile > .top-nav .small {
+    width: 14%; }
+  .profile > .top-nav .big {
+    text-align: center;
+    width: 22%; }
 
-.profile > .profilesidebar {
+.profile > .profile-sidebar {
   border-left: 2px solid #4a7fb3;
   border-bottom: 2px solid #4a7fb3;
   border-bottom-left-radius: 6px;
   height: 800px;
-  width: calc(100% / 4);
+  width: 25%;
   background-color: lightgrey;
   float: left; }
-  .profile > .profilesidebar .bloco {
-    font-family: 'Open Sans', 'Droid Sans', sans-serif;
-    padding-left: 10px;
+  .profile > .profile-sidebar .bloco {
+    font-family: "Open Sans", "Droid Sans", sans-serif;
+    padding-left: 20px;
     font-size: 14px;
-    height: 44px;
-    line-height: 44px; }
-  .profile > .profilesidebar .blocosel {
-    font-family: 'Open Sans', 'Droid Sans', sans-serif;
-    padding-left: 10px;
-    font-size: 14px;
-    height: 44px;
-    line-height: 44px;
-    background-color: #FFF; }
-  .profile > .profilesidebar a {
-    color: dimgrey; }
-  .profile > .profilesidebar a.sel {
-    background-color: #FFF;
-    color: #4a7fb3;
-    font-weight: bold; }
+    height: 40px;
+    line-height: 40px;
+    background-color: transparent; }
+    .profile > .profile-sidebar .bloco.sel {
+      background-color: #FFF; }
+  .profile > .profile-sidebar .btn {
+    border: 0;
+    color: dimgrey;
+    float: left;
+    font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
+    font-size: 15px;
+    line-height: 35px;
+    padding: 0;
+    text-align: left; }
+    .profile > .profile-sidebar .btn.sel {
+      background-color: #FFF;
+      color: #4a7fb3;
+      font-weight: bold; }
+    .profile > .profile-sidebar .btn:hover {
+      background-color: transparent;
+      color: #4a7fb3;
+      font-weight: bold; }
 
 .profile > .profilecontent {
   border-bottom: 2px solid #4a7fb3;
@@ -131,7 +144,7 @@
       .profile > .profilecontent .center .grupo .grupo-title {
         width: calc(100% / 4);
         float: left;
-        font-family: 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: "Open Sans", "Droid Sans", sans-serif;
         color: #4a7fb3;
         font-weight: bold;
         font-size: 14px; }
@@ -162,10 +175,10 @@
         margin-bottom: 10px;
         padding-left: 10px; }
       .profile > .profilecontent .center .grupo input[type="submit"] {
-        font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
         font-weight: bold;
         font-size: 13px;
-        color: #FFF;
+        color: #ffffff;
         float: right;
         background: #71aa30;
         height: 25px;
@@ -177,16 +190,16 @@
         margin-bottom: 20px; }
     .profile > .profilecontent .center .texto {
       margin-top: 10px;
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: gray;
       font-size: 12px; }
     .profile > .profilecontent .center .title2 {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: grey;
       font-weight: bold;
       font-size: 16px; }
     .profile > .profilecontent .center .title {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: #4a7fb3;
       font-weight: bold;
       font-size: 14px; }
@@ -204,19 +217,19 @@
       position: absolute;
       margin-left: 140px; }
     .profile > .profilecontent .left .valido {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: #71aa30;
       font-size: 14px; }
     .profile > .profilecontent .left .pendente {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: darkorange;
       font-size: 14px; }
     .profile > .profilecontent .left .invalido {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: darkred;
       font-size: 14px; }
     .profile > .profilecontent .left .title {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: #4a7fb3;
       font-weight: bold;
       font-size: 14px; }
@@ -224,7 +237,7 @@
       margin-top: 10px;
       font-size: 13px;
       color: #4a7fb3;
-      font-family: 'Open Sans', 'Droid Sans', sans-serif; }
+      font-family: "Open Sans", "Droid Sans", sans-serif; }
     .profile > .profilecontent .left input {
       margin-left: -10px;
       width: 200px;
@@ -245,10 +258,10 @@
       font-size: 14px;
       margin-bottom: 20px; }
     .profile > .profilecontent .left input[type="submit"] {
-      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
       font-weight: bold;
       font-size: 13px;
-      color: #FFF;
+      color: #ffffff;
       float: right;
       background: #71aa30;
       height: 25px;
@@ -266,19 +279,19 @@
       position: absolute;
       margin-left: 140px; }
     .profile > .profilecontent .profright .valido {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: #71aa30;
       font-size: 14px; }
     .profile > .profilecontent .profright .pendente {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: darkorange;
       font-size: 14px; }
     .profile > .profilecontent .profright .invalido {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: darkred;
       font-size: 14px; }
     .profile > .profilecontent .profright .title {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Open Sans", "Droid Sans", sans-serif;
       color: #4a7fb3;
       font-weight: bold;
       font-size: 14px; }
@@ -286,7 +299,7 @@
       margin-top: 10px;
       font-size: 13px;
       color: #4a7fb3;
-      font-family: 'Open Sans', 'Droid Sans', sans-serif; }
+      font-family: "Open Sans", "Droid Sans", sans-serif; }
     .profile > .profilecontent .profright input {
       margin-left: -10px;
       width: 200px;
@@ -322,10 +335,10 @@
       font-size: 14px;
       margin-bottom: 20px; }
     .profile > .profilecontent .profright input[type="submit"] {
-      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
       font-weight: bold;
       font-size: 13px;
-      color: #FFF;
+      color: #ffffff;
       float: right;
       background: #71aa30;
       height: 25px;
@@ -338,7 +351,7 @@
     .profile > .profilecontent .profright .profile-info {
       font-size: 13px;
       color: #4a7fb3;
-      font-family: 'Open Sans', 'Droid Sans', sans-serif; }
+      font-family: "Open Sans", "Droid Sans", sans-serif; }
   .profile > .profilecontent .profile-button-right {
     margin-top: 30px;
     float: right;
@@ -349,17 +362,17 @@
     width: 100%;
     margin-bottom: 10px;
     margin-top: 20px;
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+    font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
     color: #4a7fb3;
     font-weight: bold;
     font-size: 14px; }
   .profile > .profilecontent .texto {
     width: 90%;
-    font-family: 'Open Sans', 'Droid Sans', sans-serif;
+    font-family: "Open Sans", "Droid Sans", sans-serif;
     color: grey;
     font-size: 12px; }
   .profile > .profilecontent select {
-    font-family: 'Open Sans', 'Droid Sans', sans-serif;
+    font-family: "Open Sans", "Droid Sans", sans-serif;
     font-weight: normal;
     margin-left: -10px;
     height: 28px;
@@ -383,10 +396,10 @@
     font-size: 12px;
     font-weight: normal; }
   .profile > .profilecontent input[type="submit"] {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+    font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
     font-weight: bold;
     font-size: 13px;
-    color: #FFF;
+    color: #ffffff;
     float: right;
     margin-right: 5px;
     background: #71aa30;
