--- a/resources/assets/sass/profile/profile.scss
+++ b/resources/assets/sass/profile/profile.scss
@@ -1,3 +1,11 @@
+$font-exo: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+$font-sans:  'Open Sans', 'Droid Sans', sans-serif;
+
+$color-white: #ffffff;
+$color-white-hover: darken(#ffffff, 20%);
+
+$color-blue-nav: #99ccff;
+$color-blue-nav-hover: lighten($color-blue-nav, 10%);
 .profile {
   .alert {
     float: left;
@@ -14,7 +22,7 @@
       margin-top: 10px;
 
       th {
-        font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: $font-exo;
         color: #4a7fb3;
         font-weight: normal;
         font-size: 14px;
@@ -35,7 +43,7 @@
       margin-top: 10px;
 
       th {
-        font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: $font-exo;
         color: #4a7fb3;
         font-weight: normal;
         font-size: 14px;
@@ -51,21 +59,18 @@
     }
   }
 
-  > .header1 {
-    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+  > .header {
+    background-color: #4a7fb3;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
-    font-weight: bold;
-    padding-left: 10px;
-    padding-right: 10px;
-    line-height: 40px;
-    vertical-align: middle;
+    color: $color-white;
+    font-family: $font-exo;
     font-size: 16px;
+    font-weight: bold;
     height: 44px;
-
-    color: #FFF;
-
-    background-color: #4a7fb3;
+    line-height: 40px;
+    padding: 0 20px;
+    vertical-align: middle;
 
     i {
       float: right;
@@ -78,86 +83,93 @@
     }
     i:hover {
       cursor: pointer;
+      color: $color-white-hover;
     }
-
+    .user_id {
+      float: right;
+    }
   }
-  > .header {
-    padding-left: 10px;
-    padding-right: 10px;
-    line-height: 40px;
-    vertical-align: middle;
-    font-size: 16px;
-    height: 44px;
 
-    color: #FFF;
-
+  > .top-nav {
     background-color: #4a7fb3;
+    color: $color-white;
+    font-size: 16px;
+    height: 35px;
+    line-height: 30px;
+    padding: 0 20px;
+    vertical-align: middle;
+
+    .btn {
+      float: left;
+      border: 0;
+      color: $color-blue-nav;
+      font-family: $font-exo;
+      padding: 0;
+      text-align: left;
+      font-size: 15px;
+      line-height: 35px;
+      background-color: #4a7fb3;
+      &:hover {
+        color: $color-blue-nav-hover;
+        background-color: transparent;
+      }
+    }
+    .sel {
+      color: $color-white;
+      font-weight: bold;
+    }
 
     .bloco {
-
-      height: 98%;
-      font-size: 15px;
       float: left;
-      color: #99ccff;
-      background-color: #4a7fb3;
-
     }
     .small {
-      width: calc(50% / 4);
+      width: 14%;
     }
     .big {
       text-align: center;
-      width: calc(50% / 2);
-
-    }
-    a {
-      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-      color: #99ccff;
-    }
-    .sel {
-      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-      color: #FFF;
-      font-weight: bold;
+      width: 22%;
     }
   }
 
-  > .profilesidebar {
+  > .profile-sidebar {
     border-left: 2px solid #4a7fb3;
     border-bottom: 2px solid #4a7fb3;
     border-bottom-left-radius: 6px;
     height: 800px;
-    width: calc(100% / 4);
+    width: 25%;
     background-color: lightgrey;
     float: left;
 
     .bloco {
-
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
-      padding-left: 10px;
+      font-family: $font-sans;
+      padding-left: 20px;
       font-size: 14px;
-      height: 44px;
-      line-height: 44px;
-
+      height: 40px;
+      line-height: 40px;
+      background-color: transparent;
+      &.sel {
+        background-color: #FFF;
+      }
     }
-    .blocosel {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
-      padding-left: 10px;
-      font-size: 14px;
-      height: 44px;
-      line-height: 44px;
-      background-color: #FFF;
-
-    }
-    a {
-
+    .btn {
+      border: 0;
       color: dimgrey;
-
-    }
-    a.sel {
-
-      background-color: #FFF;
-      color: #4a7fb3;
-      font-weight: bold;
+      float: left;
+      font-family: $font-exo;
+      font-size: 15px;
+      line-height: 35px;
+      padding: 0;
+      text-align: left;
+      &.sel {
+        background-color: #FFF;
+        color: #4a7fb3;
+        font-weight: bold;
+      }
+      &:hover {
+        background-color: transparent;
+        color: #4a7fb3;
+        font-weight: bold;
+      }
     }
   }
 
@@ -185,7 +197,7 @@
 
           width: calc(100% / 4);
           float: left;
-          font-family: 'Open Sans', 'Droid Sans', sans-serif;
+          font-family: $font-sans;
           color: #4a7fb3;
           font-weight: bold;
           font-size: 14px;
@@ -231,10 +243,10 @@
           padding-left: 10px;
         }
         input[type="submit"] {
-          font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+          font-family: $font-exo;
           font-weight: bold;
           font-size: 13px;
-          color: #FFF;
+          color: $color-white;
           float: right;
           background: #71aa30;
           height: 25px;
@@ -249,19 +261,19 @@
 
       .texto {
         margin-top: 10px;
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: gray;
         font-size: 12px;
       }
       .title2{
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: grey;
         font-weight: bold;
         font-size: 16px;
       }
 
       .title {
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: #4a7fb3;
         font-weight: bold;
         font-size: 14px;
@@ -289,23 +301,23 @@
       }
 
       .valido{
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: #71aa30;
         font-size: 14px;
       }
       .pendente{
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: darkorange;
         font-size: 14px;
       }
       .invalido{
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: darkred;
         font-size: 14px;
       }
 
       .title {
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: #4a7fb3;
         font-weight: bold;
         font-size: 14px;
@@ -314,7 +326,7 @@
         margin-top: 10px;
         font-size: 13px;
         color: #4a7fb3;
-        font-family: 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: $font-sans;
       }
       input {
         margin-left: -10px;
@@ -339,10 +351,10 @@
         margin-bottom: 20px;
       }
       input[type="submit"] {
-        font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: $font-exo;
         font-weight: bold;
         font-size: 13px;
-        color: #FFF;
+        color: $color-white;
         float: right;
         background: #71aa30;
         height: 25px;
@@ -365,22 +377,22 @@
         margin-left:140px;
       }
       .valido{
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: #71aa30;
         font-size: 14px;
       }
       .pendente{
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: darkorange;
         font-size: 14px;
       }
       .invalido{
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: darkred;
         font-size: 14px;
       }
       .title {
-        font-family:  'Open Sans', 'Droid Sans', sans-serif;
+        font-family:  $font-sans;
         color: #4a7fb3;
         font-weight: bold;
         font-size: 14px;
@@ -389,7 +401,7 @@
         margin-top: 10px;
         font-size: 13px;
         color: #4a7fb3;
-        font-family: 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: $font-sans;
       }
       input {
         margin-left: -10px;
@@ -430,10 +442,10 @@
         margin-bottom: 20px;
       }
       input[type="submit"] {
-        font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: $font-exo;
         font-weight: bold;
         font-size: 13px;
-        color: #FFF;
+        color: $color-white;
         float: right;
         background: #71aa30;
         height: 25px;
@@ -448,7 +460,7 @@
       .profile-info {
         font-size: 13px;
         color: #4a7fb3;
-        font-family: 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: $font-sans;
       }
     }
 
@@ -465,19 +477,19 @@
       width:100%;
       margin-bottom:10px;
       margin-top:20px;
-      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: $font-exo;
       color: #4a7fb3;
       font-weight: bold;
       font-size: 14px;
     }
     .texto{
       width:90%;
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: $font-sans;
       color:grey;
       font-size:12px;
     }
     select {
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: $font-sans;
       font-weight:normal;
       margin-left: -10px;
       height: 28px;
@@ -504,10 +516,10 @@
       font-weight:normal;
     }
     input[type="submit"] {
-      font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: $font-exo;
       font-weight: bold;
       font-size: 13px;
-      color: #FFF;
+      color: $color-white;
       float: right;
       margin-right:5px;
       background: #71aa30;
