--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -116,7 +116,7 @@
     float: left;
     font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
     font-size: 15px;
-    line-height: 35px;
+    line-height: 40px;
     padding: 0;
     text-align: left; }
     .profile > .profile-sidebar .btn.sel {
@@ -132,15 +132,15 @@
       outline: 0; }
 
 .profile > .profilecontent {
+  background-color: #FFF;
+  border-bottom-right-radius: 6px;
   border-bottom: 2px solid #4a7fb3;
   border-right: 2px solid #4a7fb3;
-  border-bottom-right-radius: 6px;
-  padding-top: 20px;
   float: right;
-  width: calc(100% - (100% / 4));
   height: 800px;
-  background-color: #FFF;
-  padding-left: 30px; }
+  padding-left: 30px;
+  padding-top: 20px;
+  width: calc(100% - (100% / 4)); }
   .profile > .profilecontent .center {
     float: left;
     margin-top: 22px;
