--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -138,9 +138,43 @@
   border-right: 2px solid #4a7fb3;
   float: right;
   height: 800px;
-  padding-left: 30px;
-  padding-top: 20px;
-  width: calc(100% - (100% / 4)); }
+  padding: 20px 30px;
+  width: 75%; }
+  .profile > .profilecontent form label {
+    font-weight: normal;
+    font-size: 13px;
+    color: #4a7fb3;
+    font-family: "Open Sans", "Droid Sans", sans-serif; }
+  .profile > .profilecontent form input[disabled] {
+    background-color: #FFF;
+    border: none;
+    color: dimgrey;
+    font-size: 14px;
+    padding: 0;
+    box-shadow: none; }
+  .profile > .profilecontent form .form-control {
+    border-radius: 6px;
+    padding: 1px;
+    line-height: 25px;
+    height: 25px; }
+  .profile > .profilecontent form .input-group {
+    width: 100%; }
+    .profile > .profilecontent form .input-group i {
+      position: absolute;
+      top: 5px; }
+  .profile > .profilecontent form input[type="submit"] {
+    background: #71aa30;
+    border-radius: 6px;
+    border: none;
+    color: #ffffff;
+    float: right;
+    font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    height: 25px;
+    padding: 0 15px; }
+    .profile > .profilecontent form input[type="submit"]:hover {
+      background-color: #8bca43; }
   .profile > .profilecontent .center {
     float: left;
     margin-top: 22px;
@@ -256,13 +290,6 @@
       font-size: 14px;
       margin-bottom: 10px;
       padding-left: 10px; }
-    .profile > .profilecontent .left input.disabled {
-      margin-top: 5px;
-      border: none;
-      background-color: #FFF;
-      color: dimgrey;
-      font-size: 14px;
-      margin-bottom: 20px; }
     .profile > .profilecontent .left input[type="submit"] {
       font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
       font-weight: bold;
@@ -359,9 +386,8 @@
       color: #4a7fb3;
       font-family: "Open Sans", "Droid Sans", sans-serif; }
   .profile > .profilecontent .profile-button-right {
-    margin-top: 30px;
-    float: right;
-    margin-right: 28px; }
+    margin-top: 20px;
+    float: right; }
   .profile > .profilecontent a {
     color: #4a7fb3; }
   .profile > .profilecontent .title {
@@ -377,7 +403,7 @@
     font-family: "Open Sans", "Droid Sans", sans-serif;
     color: grey;
     font-size: 12px; }
-  .profile > .profilecontent select {
+  .profile > .profilecontent .old select {
     font-family: "Open Sans", "Droid Sans", sans-serif;
     font-weight: normal;
     margin-left: -10px;
@@ -393,29 +419,15 @@
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
     background: url("/assets/portal/img/combodown.gif") no-repeat right #fff !important; }
-  .profile > .profilecontent select.grande {
+  .profile > .profilecontent .old select.grande {
     width: 90% !important; }
-  .profile > .profilecontent textarea {
+  .profile > .profilecontent .old textarea {
     color: grey;
     width: 100%;
     height: 150px;
     font-size: 12px;
     font-weight: normal; }
-  .profile > .profilecontent input[type="submit"] {
-    font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
-    font-weight: bold;
-    font-size: 13px;
-    color: #ffffff;
-    float: right;
-    margin-right: 5px;
-    background: #71aa30;
-    height: 25px;
-    border: none;
-    border-radius: 6px;
-    width: 85px;
-    margin-top: 20px;
-    margin-bottom: 20px; }
-  .profile > .profilecontent input {
+  .profile > .profilecontent .old input {
     margin-left: -10px;
     width: 200px;
     height: 28px;
@@ -427,7 +439,7 @@
     font-size: 14px;
     margin-bottom: 10px;
     padding-left: 10px; }
-  .profile > .profilecontent input[type="number"] {
+  .profile > .profilecontent .old input[type="number"] {
     width: 50px;
     height: 28px;
     margin-top: 5px;
@@ -441,7 +453,7 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none; }
-  .profile > .profilecontent span {
+  .profile > .profilecontent .old span {
     color: grey;
     font-size: 12px; }
 
